# panache

./: .gitattributes  .gitignore  .panache.toml.example  .pre-commit-hooks.yaml  .release-please-manifest.json  .releaserc.json  .versionary-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIST_BUFFER_STATUS.md  LOSSLESS_PARSER_PROGRESS.md  LSP_WRITER_THREAD_HANDOFF.md  NEXT_RELEASE.md  PARSER_REFACTORING.md  README.md  TODO.md  Taskfile.yml  build.rs  deny.toml  devenv.nix  flake.nix  output.md  package.json  panache.bz_IssueDetailsBySeverity_6_11_2026.csv  panache.bz_PagesByIssueCategory_6_11_2026.csv  panache.bz_PagesByIssueCategory_6_11_2026_2.csv  panache.schema.json  panache.toml  plan.md  pyproject.toml  release-please-config.json  test.md  test.qmd  test2.qmd  versionary.jsonc
crates/panache-dprint/: CHANGELOG.md  Cargo.toml
crates/panache-dprint/src/: lib.rs
crates/panache-formatter/: CHANGELOG.md  Cargo.toml  README.md
crates/panache-formatter/src/: config.rs  directives.rs  formatter.rs  lib.rs  parser.rs  utils.rs  yaml_engine.rs
crates/panache-formatter/src/formatter/: code_blocks.rs  core.rs  fenced_divs.rs  hashpipe.rs  headings.rs  indent_utils.rs  inline.rs  inline_layout.rs  lists.rs  math.rs  sentence_wrap.rs  shortcodes.rs  smart.rs  tables.rs  utils.rs  yaml.rs
crates/panache-formatter/tests/: math_corpus_properties.rs  math_cross_validation.rs  math_symbol_classes.rs  yaml_cross_validation.rs
crates/panache-formatter/tests/format/: admonitions.rs  bare_uris.rs  bullet_standardization.rs  citations.rs  code_chunks.rs  comments.rs  definition_lists.rs  east_asian_line_breaks.rs  emphasis.rs  fenced_divs.rs  frontmatter.rs  header_attributes.rs  headings.rs  horizontal_rules.rs  ignore_directives.rs  image_attributes.rs  inline_code_attributes.rs  inline_executable_code.rs  inline_footnotes.rs  issue_198_rmd_blockquote_chunk_header.rs  line_blocks.rs  links.rs  lists_unordered.rs  main.rs  math.rs  nbsp.rs  no_break_abbreviations.rs  paragraphs.rs  pipe_escape.rs  preserve_wrap.rs  quotes.rs  raw_inline.rs  semantic_wrap.rs  smart.rs  spans.rs  strikeout.rs  subscript.rs  superscript.rs  tables.rs  tex.rs  (+4 more)
crates/panache-parser/: CHANGELOG.md  Cargo.toml  README.md
crates/panache-parser/examples/: profile_parse.rs
crates/panache-parser/scripts/: import-pandoc-conformance-from-parser-fixtures.sh  update-commonmark-spec-fixtures.sh  update-myst-spec-fixtures.sh  update-pandoc-conformance-corpus.sh  update-yaml-test-suite-fixtures.sh
crates/panache-parser/src/: config.rs  grid_layout.rs  lib.rs  options.rs  pandoc_ast.rs  parser.rs  range_utils.rs  syntax.rs
crates/panache-parser/src/config/: formatter_presets.rs
crates/panache-parser/src/parser/: block_dispatcher.rs  blocks.rs  core.rs  diagnostics.rs  inlines.rs  math.rs  utils.rs  yaml.rs
crates/panache-parser/src/syntax/: alerts.rs  attributes.rs  block_quotes.rs  chunk_options.rs  citations.rs  code_blocks.rs  headings.rs  inlines.rs  json.rs  kind.rs  links.rs  math.rs  myst.rs  references.rs  shortcodes.rs  yaml.rs  yaml_ast.rs
crates/panache-parser/tests/: commonmark.rs  emphasis_parser.rs  golden_parser_cases.rs  pandoc.rs  syntax_ast.rs  syntax_ast_additional.rs  yaml.rs  yaml_consumer.rs  yaml_prefix_parity.rs
crates/panache-parser/tests/cases/: README.md
crates/panache-parser/tests/commonmark/: allowlist.txt  blocked.txt  html_renderer.rs  report.json  report.txt  spec_parser.rs
crates/panache-parser/tests/pandoc/: allowlist.txt  blocked.txt  corpus_loader.rs  native_projector.rs  report.json  report.txt
crates/panache-parser/tests/snapshots/: golden_parser_cases__parser_cst_adjacent_simple_then_pipe_table_captions.snap  golden_parser_cases__parser_cst_alerts.snap  golden_parser_cases__parser_cst_alerts_disabled.snap  golden_parser_cases__parser_cst_all_punctuation_escapes_commonmark.snap  golden_parser_cases__parser_cst_atx_empty_with_closing_fence.snap  golden_parser_cases__parser_cst_atx_in_lazy_blockquote_paragraph_pandoc.snap  golden_parser_cases__parser_cst_atx_in_reduced_marker_lazy_blockquote_pandoc.snap  golden_parser_cases__parser_cst_atx_interrupts_lazy_blockquote_list_no_blank_before_header.snap  golden_parser_cases__parser_cst_atx_interrupts_lazy_blockquote_paragraph_no_blank_before_header.snap  golden_parser_cases__parser_cst_atx_interrupts_paragraph_commonmark.snap  golden_parser_cases__parser_cst_atx_interrupts_paragraph_pandoc.snap  golden_parser_cases__parser_cst_atx_interrupts_reduced_marker_lazy_blockquote_commonmark.snap  golden_parser_cases__parser_cst_atx_interrupts_reduced_marker_lazy_blockquote_depth3_commonmark.snap  golden_parser_cases__parser_cst_atx_interrupts_reduced_marker_lazy_list_no_blank_before_header.snap  golden_parser_cases__parser_cst_autolink_strict_validation_commonmark.snap  golden_parser_cases__parser_cst_autolink_strict_validation_pandoc.snap  golden_parser_cases__parser_cst_bare_uri_autolink_gfm.snap  golden_parser_cases__parser_cst_blankline_concatenation.snap  golden_parser_cases__parser_cst_blockquote_depth_change.snap  golden_parser_cases__parser_cst_blockquote_fenced_html_blocks_commonmark.snap  golden_parser_cases__parser_cst_blockquote_indented_code_tabs_commonmark.snap  golden_parser_cases__parser_cst_blockquote_lazy_continuation_reduced_markers.snap  golden_parser_cases__parser_cst_blockquote_list_blanks.snap  golden_parser_cases__parser_cst_blockquote_list_blockquote.snap  golden_parser_cases__parser_cst_blockquote_list_item_first_line_heading_pandoc.snap  golden_parser_cases__parser_cst_blockquote_list_item_first_line_hr_pandoc.snap  golden_parser_cases__parser_cst_blockquote_list_item_first_line_html_div_multiline_pandoc.snap  golden_parser_cases__parser_cst_blockquote_list_item_first_line_html_div_pandoc.snap  golden_parser_cases__parser_cst_blockquote_list_lazy_continuation_no_marker.snap  golden_parser_cases__parser_cst_blockquote_list_no_marker_closes_commonmark.snap  golden_parser_cases__parser_cst_blockquote_list_no_marker_continues_pandoc.snap  (+1184 more)
(+2432 files in other folders)
