[package]
name = "panache"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "A formatter for Pandoc, Quarto, and RMarkdown documents"
license = "MIT"
repository = "https://github.com/jolars/panache"
homepage = "https://github.com/jolars/panache"
keywords = ["quarto", "pandoc", "markdown", "formatter"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Johan Larsson <johan@jolars.co>"]

[workspace]
members = ["crates/panache-wasm"]

[[bin]]
name = "panache"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"], optional = true }
env_logger = "0.11.8"
regex = "1.11.2"
rowan = "0.16.1"
serde = { version = "1.0.226", features = ["derive"] }
similar = { version = "2.6.0", features = ["text"] }
textwrap = "0.16.2"
tokio = { version = "1", features = [
  "process",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "time",
  "macros",
  "fs",
], optional = true }
toml = "0.9.6"
tower-lsp-server = { version = "0.23", optional = true }
uuid = { version = "1.11.0", features = ["v4"], optional = true }

[dependencies.log]
version = "0.4.28"
features = ["release_max_level_info"] # disables debug/trace in release

[dev-dependencies]
similar-asserts = "1.7.0"
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = ["cli", "lsp"]
cli = ["dep:clap"]
lsp = ["dep:tokio", "dep:tower-lsp-server", "dep:uuid"]

[build-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
clap-markdown = "0.1.5"
