[package]
name = "panache-formatter"
version = "0.12.0"
edition.workspace = true
include = [
    "/src/**/*",
    "/README.md",
    "/CHANGELOG.md",
]
description = "Core formatting engine for Pandoc markdown, Quarto, and RMarkdown"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
documentation = "https://docs.rs/panache-formatter"
keywords = ["quarto", "pandoc", "markdown", "formatter"]
categories = ["text-processing"]

[dependencies]
panache-parser = { path = "../panache-parser", version = "0.17.0" }
log = { version = "0.4.31", features = ["release_max_level_debug"] }
rowan = "0.16.1"
unicode-width = "0.2"

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
# TEMPORARY: cross-validation oracle only (tests/yaml_cross_validation.rs).
# The in-tree formatter is the source of truth. Drop this dep (and re-base
# the parity test onto golden expected outputs) once the in-tree YAML
# formatter has been stable in releases for a few months — revisit ~2026-09.
pretty_yaml = "0.6.0"
# TEMPORARY: dev-only math cross-validation oracle (tests/math_cross_validation.rs).
# Renders TeX content to MathML so the math formatter can be checked for
# meaning-preservation (render(x) == render(format(x))). The in-tree formatter is
# the source of truth; this is a correctness signal, never a runtime dependency.
# Revisit alongside the YAML oracle once the math formatter has been stable in
# releases for a few months.
pulldown-latex = "0.7.1"
similar-asserts = "2.0.0"
toml = "1.1.2"
