[package]
name = "panache-parser"
version = "2.35.0"
edition.workspace = true
readme = "README.md"
description = "Lossless CST parser and syntax wrappers for Pandoc markdown, Quarto, and RMarkdown"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/panache-parser"
keywords = ["quarto", "pandoc", "markdown", "parser", "syntax"]
categories = ["text-processing", "parsing", "parser-implementations"]
authors.workspace = true

[dependencies]
rowan = "0.16.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }
yaml_parser = "0.3.0"
log = { version = "0.4.28", features = ["release_max_level_info"] }
unicode-width = "0.2"

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
serde_json = "1.0"
toml = "1.1.2"
