[package]
name = "panache-parser"
version = "0.22.1"
edition.workspace = true
readme = "README.md"
include = [
    "/src/**/*",
    "/build.rs",
    "/README.md",
    "/CHANGELOG.md",
]
description = "Lossless CST parser and syntax wrappers for Pandoc markdown, Quarto, and RMarkdown"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/panache-parser"
keywords = ["quarto", "pandoc", "markdown", "parser", "syntax"]
categories = ["text-processing", "parsing", "parser-implementations"]
authors.workspace = true

[dependencies]
entities = "1.0.2-rc.1"
rowan = "0.16.1"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.150"
schemars = { version = "1.2.1", optional = true }
log = { version = "0.4.31", features = ["release_max_level_debug"] }
memchr = "2.8.3"
smallvec = "1.15.2"
unicode-width = "0.2.2"

[features]
default = []
serde = ["dep:serde"]
schema = ["serde", "dep:schemars"]

[dev-dependencies]
insta = "1.47.2"
toml = "1.1.2"
